# soundsbored

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: soundboard.txt
src/soundsbored/: __init__.py  __main__.py  cli.py  download.py  import_local.py  index.py  menu.py  notify.py  paths.py  player.py  soundboard.py
src/soundsbored/data/: soundboard.txt
