[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundsbored"
version = "0.2.0"
description = "Cross-platform multi-category soundboard (rofi on Linux, fzf on macOS)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "soundsbored contributors" }]
keywords = ["soundboard", "rofi", "fzf", "mpv", "yt-dlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
  "platformdirs>=4.0",
]

[project.optional-dependencies]
download = ["yt-dlp>=2024.1.0"]

[project.scripts]
soundsbored = "soundsbored.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USER/soundsbored"
Repository = "https://github.com/YOUR_USER/soundsbored"

[tool.hatch.build.targets.wheel]
packages = ["src/soundsbored"]

# Ship default soundboard list inside the package
[tool.hatch.build.targets.wheel.force-include]
"src/soundsbored/data/soundboard.txt" = "soundsbored/data/soundboard.txt"

[tool.hatch.build]
[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/data",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
